// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi-Org Test - Query Loans query document 1 by field 1`] = `
Array [
  Object {
    "loan": Object {
      "description": "Org1 Loan 1",
      "ownerId": "USER_ORG1",
      "reference": "REF-ORG1-LOAN-1",
      "status": 0,
    },
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-DOC-1",
    "status": 0,
    "title": "Org1 Document 1",
  },
  Object {
    "loan": Object {
      "description": "Org1 Loan 1",
      "ownerId": "USER_ORG1",
      "reference": "REF-ORG1-LOAN-1",
      "status": 0,
    },
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-DOC-2",
    "status": 0,
    "title": "Org1 Document 2",
  },
]
`;

exports[`Multi-Org Test - Query Loans query document 1 contains 1`] = `
Array [
  Object {
    "loan": Object {
      "description": "Org1 Loan 1",
      "ownerId": "USER_ORG1",
      "reference": "REF-ORG1-LOAN-1",
      "status": 0,
    },
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-DOC-1",
    "status": 0,
    "title": "Org1 Document 1",
  },
  Object {
    "loan": Object {
      "description": "Org1 Loan 1",
      "ownerId": "USER_ORG1",
      "reference": "REF-ORG1-LOAN-1",
      "status": 0,
    },
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-DOC-2",
    "status": 0,
    "title": "Org1 Document 2",
  },
]
`;

exports[`Multi-Org Test - Query Loans query document 2 by field 1`] = `
Array [
  Object {
    "loan": Object {
      "description": "Org2 Loan 2",
      "ownerId": "USER_ORG2",
      "reference": "REF-ORG2-LOAN-2",
      "status": 0,
    },
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-DOC-1",
    "status": 0,
    "title": "Org2 Document 1",
  },
  Object {
    "loan": Object {
      "description": "Org2 Loan 2",
      "ownerId": "USER_ORG2",
      "reference": "REF-ORG2-LOAN-2",
      "status": 0,
    },
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-DOC-2",
    "status": 0,
    "title": "Org2 Document 2",
  },
]
`;

exports[`Multi-Org Test - Query Loans query document 2 contains 1`] = `
Array [
  Object {
    "loan": Object {
      "description": "Org2 Loan 2",
      "ownerId": "USER_ORG2",
      "reference": "REF-ORG2-LOAN-2",
      "status": 0,
    },
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-DOC-1",
    "status": 0,
    "title": "Org2 Document 1",
  },
  Object {
    "loan": Object {
      "description": "Org2 Loan 2",
      "ownerId": "USER_ORG2",
      "reference": "REF-ORG2-LOAN-2",
      "status": 0,
    },
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-DOC-2",
    "status": 0,
    "title": "Org2 Document 2",
  },
]
`;

exports[`Multi-Org Test - Query Loans query loan 1 1`] = `
Object {
  "_details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 1 for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 1",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 1",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
    null,
  ],
  "comment": Any<String>,
  "description": "Org1 Loan 1",
  "documents": Array [
    Object {
      "contents": Object {
        "content": Object {
          "body": "{ \\"message\\": \\"Org1 docContents 1\\" }",
        },
      },
      "reference": "REF-ORG1-DOC-1",
      "status": 0,
      "title": "Org1 Document 1",
    },
    Object {
      "contents": Object {
        "content": Object {
          "format": "PDF",
          "link": "http://fake.it/docs/org1DocContents-2.pdf",
        },
      },
      "reference": "REF-ORG1-DOC-2",
      "status": 0,
      "title": "Org1 Document 2",
    },
  ],
  "ownerId": "USER_ORG1",
  "reference": "REF-ORG1-LOAN-1",
  "status": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 1 by field 1`] = `
Array [
  Object {
    "description": "Org1 Loan 1",
    "documents": Array [
      Object {
        "reference": "REF-ORG1-DOC-1",
        "status": 0,
        "title": "Org1 Document 1",
      },
      Object {
        "reference": "REF-ORG1-DOC-2",
        "status": 0,
        "title": "Org1 Document 2",
      },
    ],
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-LOAN-1",
    "status": 0,
  },
]
`;

exports[`Multi-Org Test - Query Loans query loan 1 contains 1`] = `
Array [
  Object {
    "description": "Org1 Loan 1",
    "documents": Array [
      Object {
        "reference": "REF-ORG1-DOC-1",
        "status": 0,
        "title": "Org1 Document 1",
      },
      Object {
        "reference": "REF-ORG1-DOC-2",
        "status": 0,
        "title": "Org1 Document 2",
      },
    ],
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-LOAN-1",
    "status": 0,
  },
  Object {
    "description": "Org2 Loan 2",
    "documents": Array [
      Object {
        "reference": "REF-ORG2-DOC-1",
        "status": 0,
        "title": "Org2 Document 1",
      },
      Object {
        "reference": "REF-ORG2-DOC-2",
        "status": 0,
        "title": "Org2 Document 2",
      },
    ],
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-LOAN-2",
    "status": 0,
  },
]
`;

exports[`Multi-Org Test - Query Loans query loan 2 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 2",
  "details": Object {
    "approvedAmt": null,
    "comment": "Org2 LoanDetails 2",
    "contact": Object {
      "email": "c0002@fake.it",
      "name": "Contact 2",
      "phone": "555-0002",
      "salutation": null,
      "title": null,
    },
    "currency": "HKD",
    "loanType": null,
    "requestedAmt": 42.9,
    "requester": Object {
      "name": "Loan Requester 2",
      "registration": "BR1234567XXX2",
      "type": null,
    },
    "startDate": "1574846420902",
    "tenor": 52,
  },
  "documents": Array [
    Object {
      "_contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1 for Org2\\" }",
          },
        },
        null,
      ],
      "reference": "REF-ORG2-DOC-1",
      "status": 0,
      "title": "Org2 Document 1",
    },
    Object {
      "_contents": Array [
        null,
        null,
      ],
      "reference": "REF-ORG2-DOC-2",
      "status": 0,
      "title": "Org2 Document 2",
    },
  ],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-2",
  "status": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 2 by field 1`] = `
Array [
  Object {
    "description": "Org2 Loan 2",
    "documents": Array [
      Object {
        "reference": "REF-ORG2-DOC-1",
        "status": 0,
        "title": "Org2 Document 1",
      },
      Object {
        "reference": "REF-ORG2-DOC-2",
        "status": 0,
        "title": "Org2 Document 2",
      },
    ],
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-LOAN-2",
    "status": 0,
  },
]
`;

exports[`Multi-Org Test - Query Loans query loan 2 contains 1`] = `
Array [
  Object {
    "description": "Org1 Loan 1",
    "documents": Array [
      Object {
        "reference": "REF-ORG1-DOC-1",
        "status": 0,
        "title": "Org1 Document 1",
      },
      Object {
        "reference": "REF-ORG1-DOC-2",
        "status": 0,
        "title": "Org1 Document 2",
      },
    ],
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-LOAN-1",
    "status": 0,
  },
  Object {
    "description": "Org2 Loan 2",
    "documents": Array [
      Object {
        "reference": "REF-ORG2-DOC-1",
        "status": 0,
        "title": "Org2 Document 1",
      },
      Object {
        "reference": "REF-ORG2-DOC-2",
        "status": 0,
        "title": "Org2 Document 2",
      },
    ],
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-LOAN-2",
    "status": 0,
  },
]
`;
